# xueqiu_portfolio

./: .gitignore  LICENSE  README.md  daily_portfolio_digest.py  logs.txt
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/tests/: test_benchmark_enrich.py  test_copy_conviction.py  test_discovery_expand.py  test_discovery_old_low_return.py  test_portfolio_dividend.py  test_portfolio_rebalance_category.py  test_sina_index_parse.py  test_strategy_config_isolation.py
backend/xueqiu/: __init__.py  config.py
backend/xueqiu/api/: main.py  schemas.py  services.py
backend/xueqiu/domain/: benchmark_series.py  codes.py  copy_backtest.py  copy_conviction.py  copy_strategies.py  data_freshness.py  digest_holdings_export.py  discovery_hot_symbols.py  discovery_mine.py  discovery_preview.py  discovery_store.py  discovery_symbol_pool.py  holdings_snapshot.py  nav_engine.py  official_nav.py  overview_light.py  overview_stats.py  personal_account.py  portfolio_discover.py  risk_metrics.py
backend/xueqiu/integrations/: stock_names.py
backend/xueqiu/integrations/sina/: hfq.py  index.py  spot.py
backend/xueqiu/integrations/xueqiu/: auth.py  client.py  cube_rank.py  portfolio.py  posts.py  social.py  watchlist.py
backend/xueqiu/storage/: db.py
backend/xueqiu/sync/: sync_cancel.py  sync_cube_catalog.py  sync_cube_nav.py  sync_log.py  sync_quotes.py  sync_tushare_aux.py
daily_digest/: README.md  daily_digest_state.example.json  daily_portfolio_digest.py  install_digest_scheduled_task.ps1  preview_latest_rebalance.py  requirements.txt  (+2 more)
(+133 files in other folders)
