[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xueqiu-portfolio"
version = "0.6.0"
description = "雪球组合调仓分析"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "python-dotenv>=1.0",
    "tushare>=1.4.18",
    "requests>=2.31",
    "openai>=1.0",
    "oss2>=2.18",
]

[project.optional-dependencies]
login = ["DrissionPage>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["xueqiu*"]
